feat(request): added GET and POST APIs
POST /requests , GET /requests , GET /requests/{id}

re #1
